# backend/fantaf1-backend/fantaf1-dati/src/main/java/com/fantaf1/fantaf1_dati/controller/PilotController.java
@@ -37,6 +37,11 @@ public class PilotController implements PilotiApi {
     }
 
     @Override
+    public ResponseEntity<Integer> getTotaleCostoPiloti(List<Integer> requestBody) {
+        return ResponseEntity.ok(pilotService.getTotalCostOfDrivers(requestBody));
+    }
+
+    @Override
     public ResponseEntity<Void> updatePilotCostById(Integer id, AggiornaCostoRequest aggiornaCostoRequest) {
         return ResponseEntity.ok(pilotService.updateDriverCostById(Long.valueOf(id), aggiornaCostoRequest.getNuovoValore()));
     }
